--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
 
         <h1>HOLA CAMBIO</h1>
+        <h2>HOla cambio 222</h2>
 
         <img src="./assets/Captura de Pantalla 2022-05-09 a las 22.30.30.png" alt="Logo" class="header__logo">
         <div class="header__link__after">
